--- a/themes/nsystems/css/style.css
+++ b/themes/nsystems/css/style.css
@@ -24,7 +24,7 @@ html {
 body {
   margin: 0;
   font-size: 13px;
-  line-height: 1.231; /* 1.231 WILL BE MULTIPLIED BY CURRENT FONT SIZE AND MAKE 16PX LINE HEIGHT */
+    /* 1.231 WILL BE MULTIPLIED BY CURRENT FONT SIZE AND MAKE 16PX LINE HEIGHT */
   min-height:100%;
   font-family: sans-serif;
   color: #373737;
@@ -368,10 +368,13 @@ content ul
 .bordered, .bordered td
 {
     border: #fff 1px solid;
+    line-height: 22px;
+    text-align: center;
+    vertical-align: middle;
 }
 table.small, table.small td
 {
-    font-size: 13px;
+    font-size: 12px;
 }
 .ident
 {
