--- a/themes/nsystems/css/style.css
+++ b/themes/nsystems/css/style.css
@@ -349,9 +349,9 @@ content ul
 }
 .autoheighttips
 {
-    min-height: 235px;
-    max-height: 235px;
-    height: 235px;
+    min-height: 165px;
+    clear: right;
+    display: block;
 }
 .s
 {
@@ -383,7 +383,7 @@ table.small, table.small td
 }
 table.medium, table.medium td
 {
-    font-size: 15px;
+    font-size: 13px;
 }
 table.medium thead td
 {
@@ -391,4 +391,45 @@ table.medium thead td
     height: 20px;
     line-height: 20px;
     vertical-align: middle;
+}
+#summary
+{
+    padding-left: 22px;
+    color: lime;
+    font-size: 20px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+}
+
+#paypal_submit
+{
+ width: 141px;
+    background-color: transparent;
+    height: 30px;
+    padding-left: 19px;
+    padding-top: 10px;
+}
+.paypal_submit
+{
+}
+
+.choosecolumn
+{
+    width: 30px;
+}
+.col1
+{
+    width: 17px;
+}
+.col2
+{
+    width: 30px;
+}
+.col3
+{
+    width: 23px;
+}
+.col4
+{
+    width: 27px;
 }
