--- a/themes/nsystems/css/style.css
+++ b/themes/nsystems/css/style.css
@@ -79,7 +79,7 @@ a {
   font-size: 100%;
   vertical-align: baseline;
   background: transparent;
-  text-decoration: none;
+  text-decoration: underline;
   color:inherit;
 }
 a:hover,
@@ -368,7 +368,7 @@ content ul
 .bordered, .bordered td
 {
     border: #fff 1px solid;
-    line-height: 22px;
+    line-height: 11px;
     text-align: center;
     vertical-align: middle;
 }
